--- a/logstash/pipelines/zeek/01_input_zeek.conf
+++ b/logstash/pipelines/zeek/01_input_zeek.conf
@@ -4,3 +4,12 @@ input {
   }
 }
 
+filter {
+  # this pipeline only needs to see Zeek logs forwarded from filebeat
+  if ("_filebeat_zeek" in [tags]) {
+    mutate { id => "mutate_filebeat_zeek_forward_tag_remove"
+             remove_tag => [ "_filebeat_zeek" ] }
+  } else {
+    drop { id => "drop_not_filebeat_zeek" }
+  }
+}
