move zeek.http.tags up into top-level tags array in logstash

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -4485,10 +4485,18 @@ filter {
              split => { "[zeek][http][resp_filenames]" => "," } }
     mutate { id => "mutate_split_zeek_http_resp_mime_types"
              split => { "[zeek][http][resp_mime_types]" => "," } }
-    mutate { id => "mutate_split_zeek_http_tags"
-             split => { "[zeek][http][tags]" => "," } }
     mutate { id => "mutate_split_zeek_http_proxied"
              split => { "[zeek][http][proxied]" => "," } }
+
+    if ([zeek][http][tags]) {
+      # merge zeek.http.tags into tags and then remove original
+      mutate { id => "mutate_split_zeek_http_tags"
+               split => { "[zeek][http][tags]" => "," } }
+      mutate { id => "mutate_merge_zeek_http_tags"
+               merge => { "[tags]" => "[zeek][http][tags]" } }
+      mutate { id => "mutate_remove_field_zeek_http_tags"
+               remove_field => [ "[zeek][http][tags]" ] }
+    }
 
     if ([zeek][http][host]) {
       mutate { id => "mutate_merge_zeek_http_host"
