--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,6 +33,10 @@ http {
     server arkime:8005;
   }
 
+  upstream api {
+    server api:5000;
+  }
+
   upstream malcolm-readme {
     server arkime:8000;
   }
@@ -219,6 +223,12 @@ http {
       proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $remote_user;
       proxy_set_header Authorization "";
+    }
+
+    location /mapi {
+      proxy_pass http://api/;
+      proxy_redirect off;
+      proxy_set_header Host api.malcolm.local;
     }
 
     location / {
