update deprecated logstash filters

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -442,8 +442,8 @@ filter {
   if ([tls][ja3]) and ([tls][ja3][0]) {
     translate {
       id => "translate_ssl_ja3"
-      field => "[tls][ja3][0]"
-      destination => "[tls][client][ja3_description]"
+      source => "[tls][ja3][0]"
+      target => "[tls][client][ja3_description]"
       dictionary_path => "/etc/ja3.yaml"
     }
   }
@@ -451,8 +451,8 @@ filter {
   if ([tls][ja3s]) and ([tls][ja3s][0]) {
     translate {
       id => "translate_ssl_ja3s"
-      field => "[tls][ja3s][0]"
-      destination => "[tls][server][ja3s_description]"
+      source => "[tls][ja3s][0]"
+      target => "[tls][server][ja3s_description]"
       dictionary_path => "/etc/ja3.yaml"
     }
   }
