--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3995,8 +3995,8 @@ filter {
   if ([network][transport]) {
     translate {
       id => "translate_zeek_proto"
-      field => "[network][transport]"
-      destination => "[ipProtocol]"
+      source => "[network][transport]"
+      target => "[ipProtocol]"
       dictionary_path => "/etc/ip_protocol_numbers.yaml"
     }
     mutate { id => "mutate_split_zeek_proto"
@@ -4037,8 +4037,8 @@ filter {
 
     translate {
       id => "translate_zeek_conn_state"
-      field => "[zeek][conn][conn_state]"
-      destination => "[zeek][conn][conn_state_description]"
+      source => "[zeek][conn][conn_state]"
+      target => "[zeek][conn][conn_state_description]"
       dictionary_path => "/etc/conn_states.yaml"
     }
 
@@ -4966,8 +4966,8 @@ filter {
     # ECS - zeek.notice.category -> rule.author (mapped)
     translate {
       id => "translate_zeek_notice_author"
-      field => "[zeek][notice][category]"
-      destination => "[@metadata][zeek_noticed_mapped_author]"
+      source => "[zeek][notice][category]"
+      target => "[@metadata][zeek_noticed_mapped_author]"
       dictionary_path => "/etc/notice_authors.yaml"
       fallback => "Zeek"
     }
@@ -4979,8 +4979,8 @@ filter {
     # ECS - zeek.notice.category -> rule.reference (mapped)
     translate {
       id => "translate_zeek_notice_reference"
-      field => "[zeek][notice][category]"
-      destination => "[@metadata][zeek_noticed_mapped_reference]"
+      source => "[zeek][notice][category]"
+      target => "[@metadata][zeek_noticed_mapped_reference]"
       dictionary_path => "/etc/notice_reference.yaml"
       fallback => "https://docs.zeek.org/en/current/zeek-noticeindex.html"
     }
@@ -4992,8 +4992,8 @@ filter {
     # ECS - zeek.notice.category -> rule.license (mapped)
     translate {
       id => "translate_zeek_notice_license"
-      field => "[zeek][notice][category]"
-      destination => "[@metadata][zeek_noticed_mapped_license]"
+      source => "[zeek][notice][category]"
+      target => "[@metadata][zeek_noticed_mapped_license]"
       dictionary_path => "/etc/notice_license.yaml"
       fallback => "https://raw.githubusercontent.com/zeek/zeek/master/COPYING"
     }
@@ -5016,14 +5016,14 @@ filter {
                  gsub => [ "[threat][tactic][name]", "_,", " " ] }
         translate {
           id => "translate_zeek_mitre_attack_tactic_name_to_id"
-          field => "[zeek][notice][sub_category]"
-          destination => "[threat][tactic][id]"
+          source => "[zeek][notice][sub_category]"
+          target => "[threat][tactic][id]"
           dictionary_path => "/etc/mitre_attack_tactic_ids.yaml"
         }
         translate {
           id => "translate_zeek_mitre_attack_tactic_name_to_reference"
-          field => "[zeek][notice][sub_category]"
-          destination => "[threat][tactic][reference]"
+          source => "[zeek][notice][sub_category]"
+          target => "[threat][tactic][reference]"
           dictionary_path => "/etc/mitre_attack_tactic_reference.yaml"
           fallback => "https://attack.mitre.org/tactics/enterprise/"
         }
@@ -5097,8 +5097,8 @@ filter {
     if ([zeek][ntp][mode]) {
       translate {
         id => "translate_zeek_ntp_mode_str"
-        field => "[zeek][ntp][mode]"
-        destination => "[zeek][ntp][mode_str]"
+        source => "[zeek][ntp][mode]"
+        target => "[zeek][ntp][mode_str]"
         dictionary_path => "/etc/ntp_modes.yaml"
       }
     }
@@ -6029,8 +6029,8 @@ filter {
   # ECS - event.category based on event.dataset (https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-category.html)
   translate {
     id => "translate_zeek_ecs_event_category"
-    field => "[event][dataset]"
-    destination => "[event][category]"
+    source => "[event][dataset]"
+    target => "[event][category]"
     dictionary_path => "/etc/zeek_log_ecs_categories.yaml"
   }
 
