--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -528,8 +528,8 @@ filter {
     # normalized version of reply code (reply_msg is too unpredictable)
     translate {
       id => "translate_zeek_ftp_reply_code"
-      field => "[zeek][ftp][reply_code]"
-      destination => "[@metadata][zeek_ftp_mapped_result]"
+      source => "[zeek][ftp][reply_code]"
+      target => "[@metadata][zeek_ftp_mapped_result]"
       dictionary_path => "/etc/ftp_result_codes.yaml"
     }
     if ([@metadata][zeek_ftp_mapped_result]) {
@@ -548,8 +548,8 @@ filter {
     # normalized version of http reply code (status_msg is too unpredictable)
     translate {
       id => "translate_zeek_http_reply_code"
-      field => "[zeek][http][status_code]"
-      destination => "[@metadata][zeek_http_mapped_result]"
+      source => "[zeek][http][status_code]"
+      target => "[@metadata][zeek_http_mapped_result]"
       dictionary_path => "/etc/http_result_codes.yaml"
     }
     if ([@metadata][zeek_http_mapped_result]) {
@@ -685,8 +685,8 @@ filter {
     # reference: https://github.com/wireshark/wireshark/blob/master/epan/dissectors/packet-s7comm.c
     translate {
       id => "translate_zeek_s7comm_parameters_code"
-      field => "[zeek][s7comm][parameters][code]"
-      destination => "[@metadata][zeek_s7comm_mapped_result]"
+      source => "[zeek][s7comm][parameters][code]"
+      target => "[@metadata][zeek_s7comm_mapped_result]"
       dictionary_path => "/etc/s7comm_result_codes.yaml"
       fallback => "%{[zeek][s7comm][parameters][code]}"
     }
@@ -700,8 +700,8 @@ filter {
     # normalized version of sip reply code (status_msg may be unpredictable)
     translate {
       id => "translate_zeek_sip_reply_code"
-      field => "[zeek][sip][status_code]"
-      destination => "[@metadata][zeek_sip_mapped_result]"
+      source => "[zeek][sip][status_code]"
+      target => "[@metadata][zeek_sip_mapped_result]"
       dictionary_path => "/etc/sip_result_codes.yaml"
     }
     if ([@metadata][zeek_sip_mapped_result]) {
@@ -720,8 +720,8 @@ filter {
     # zeek_smb_cmd.status (SUCCESS, NO_SUCH_FILE, ACCESS_DENIED, OBJECT_NAME_COLLISION, etc.)
     translate {
       id => "translate_zeek_smb_cmd_status"
-      field => "[zeek][smb_cmd][status]"
-      destination => "[@metadata][zeek_smb_cmd_mapped_result]"
+      source => "[zeek][smb_cmd][status]"
+      target => "[@metadata][zeek_smb_cmd_mapped_result]"
       dictionary => {
         "SUCCESS" => "Success"
         # TODO... normalize other codes? or maybe just case-normalize and remove underscores/dashes?
@@ -740,8 +740,8 @@ filter {
       # normalized version of smtp reply code (last_reply may be unpredictable)
       translate {
         id => "translate_zeek_smtp_last_reply_code"
-        field => "[zeek][smtp][last_reply_code]"
-        destination => "[@metadata][zeek_smtp_mapped_result]"
+        source => "[zeek][smtp][last_reply_code]"
+        target => "[@metadata][zeek_smtp_mapped_result]"
         dictionary_path => "/etc/smtp_result_codes.yaml"
       }
     }
@@ -757,8 +757,8 @@ filter {
   if ([zeek][socks][server_status]) {
     translate {
       id => "translate_zeek_socks_server_status"
-      field => "[zeek][socks][server_status]"
-      destination => "[@metadata][zeek_socks_mapped_result]"
+      source => "[zeek][socks][server_status]"
+      target => "[@metadata][zeek_socks_mapped_result]"
       dictionary => {
         "succeeded" => "Success"
         # TODO... normalize other codes (figure out what they are)
@@ -776,8 +776,8 @@ filter {
   if ([zeek][ssh][auth_success]) {
     translate {
       id => "translate_zeek_ssh_auth_success"
-      field => "[zeek][ssh][auth_success]"
-      destination => "[@metadata][zeek_ssh_mapped_result]"
+      source => "[zeek][ssh][auth_success]"
+      target => "[@metadata][zeek_ssh_mapped_result]"
       dictionary => {
         "T" => "Success"
         "F" => "Failure"
@@ -846,8 +846,8 @@ filter {
       # normalized version of reply code
       translate {
         id => "translate_zeek_tftp_error_code"
-        field => "[zeek][tftp][error_code]"
-        destination => "[@metadata][zeek_tftp_mapped_result]"
+        source => "[zeek][tftp][error_code]"
+        target => "[@metadata][zeek_tftp_mapped_result]"
         dictionary_path => "/etc/tftp_result_codes.yaml"
       }
       if ([@metadata][zeek_tftp_mapped_result]) {
