--- a/nginx/nginx_readonly.conf
+++ b/nginx/nginx_readonly.conf
@@ -41,14 +41,6 @@ http {
     server arkime:8000;
   }
 
-  upstream upload {
-    server upload:80;
-  }
-
-  upstream htadmin {
-    server htadmin:80;
-  }
-
   upstream dashboards {
     server dashboards:5601;
   }
@@ -57,33 +49,8 @@ http {
     server dashboards-helper:28991;
   }
 
-  upstream opensearch {
-    server opensearch:9200;
-  }
-
-  upstream logstash-stats {
-    server logstash:9600;
-  }
-
-  upstream name-map-ui {
-    server name-map-ui:8080;
-  }
-
   upstream extracted-file-http-server {
     server file-monitor:8440;
-  }
-
-  # htadmin (htpasswd/user management)
-  server {
-    listen 488 ssl;
-    ssl_certificate /etc/nginx/certs/cert.pem;
-    ssl_certificate_key /etc/nginx/certs/key.pem;
-
-    location / {
-      proxy_pass http://htadmin;
-      proxy_redirect off;
-      proxy_set_header Host htadmin.malcolm.local;
-    }
   }
 
   # Arkime interface
@@ -98,35 +65,6 @@ http {
     # Malcolm readme
     location /readme {
       proxy_pass http://malcolm-readme/README.html;
-      proxy_redirect off;
-      proxy_set_header Host arkime.malcolm.local;
-    }
-
-    # Malcolm file upload
-    location /upload {
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-      proxy_pass http://upload/;
-      proxy_redirect off;
-      proxy_set_header Host upload.malcolm.local;
-      proxy_request_buffering off;
-      proxy_buffering off;
-      client_max_body_size 50G;
-    }
-    location /server/php {
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-      proxy_pass http://upload/server/php/;
-      proxy_redirect off;
-      proxy_set_header Host upload.malcolm.local;
-      proxy_request_buffering off;
-      proxy_buffering off;
-      client_max_body_size 50G;
-    }
-
-    # Logstash statistics
-    location ~* ^/logstash\b(.*) {
-      proxy_pass http://logstash-stats/_node/stats$1;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
     }
@@ -192,14 +130,6 @@ http {
       proxy_set_header Host dashboards-helper.malcolm.local;
     }
 
-    # name-map-ui (UI for mapping names to network hosts and subnets)
-    location /name-map-ui {
-      proxy_pass http://name-map-ui/;
-      proxy_redirect off;
-      proxy_set_header Host name-map-ui.malcolm.local;
-      proxy_cache off;
-    }
-
     location ~* ^/extracted-files\b(.*) {
       proxy_pass http://extracted-file-http-server$1;
       proxy_redirect off;
@@ -231,80 +161,17 @@ http {
       proxy_set_header Host api.malcolm.local;
     }
 
+    location ~* ^/(api/)?(files|d?stats|es(indices|nodes|shards|tasks|recovery)|histor(y|ies)|notifiers|hunts?|settings|shortcuts|users|user/(config/(es)?[nN]odes|cron|settings)) {
+      deny all;
+    }
+
     location / {
+      limit_except GET POST { deny  all; }
       proxy_pass http://arkime;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $remote_user;
       proxy_set_header Authorization "";
-    }
-  }
-
-  # OpenSearch dashboards interface
-  server {
-    listen 5601 ssl;
-    ssl_certificate /etc/nginx/certs/cert.pem;
-    ssl_certificate_key /etc/nginx/certs/key.pem;
-
-    # use either auth_basic or auth_ldap
-    include /etc/nginx/nginx_auth_rt.conf;
-
-    location = /favicon.ico {
-      alias /etc/nginx/favicon.ico;
-    }
-
-    # Dashboards -> Arkime shortcut
-    location ~* /iddash2ark/(.*) {
-      rewrite ^.*/iddash2ark/(.*) /sessions?expression=($1) redirect;
-      proxy_pass http://arkime;
-      proxy_redirect off;
-      proxy_set_header Host arkime.malcolm.local;
-      proxy_set_header http_auth_http_user $remote_user;
-      proxy_set_header Authorization "";
-    }
-
-    # Dashboards -> extracted file download
-    location ~* /dl-extracted-files/(.*) {
-      rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
-      proxy_pass http://extracted-file-http-server;
-      proxy_redirect off;
-      proxy_set_header Host file-monitor.malcolm.local;
-    }
-
-    # already prepended /dashboards to match the server.basePath in OpenSearch Dashboards' YML config file
-    location /dashboards {
-      proxy_pass http://dashboards;
-      proxy_redirect off;
-      proxy_set_header Host dashboards.malcolm.local;
-    }
-
-    # otherwise prepend /dashboards to match the server.basePath in OpenSearch Dashboards' YML config file
-    location / {
-      rewrite ^/(.*) /dashboards/$1;
-      proxy_pass http://dashboards;
-      proxy_redirect off;
-      proxy_set_header Host dashboards.malcolm.local;
-    }
-  }
-
-  # OpenSearch API
-  server {
-    listen 9200 ssl;
-    ssl_certificate /etc/nginx/certs/cert.pem;
-    ssl_certificate_key /etc/nginx/certs/key.pem;
-
-    # use either auth_basic or auth_ldap
-    include /etc/nginx/nginx_auth_rt.conf;
-
-    location = /favicon.ico {
-      alias /etc/nginx/favicon.ico;
-    }
-
-    location / {
-      proxy_pass http://opensearch;
-      proxy_redirect off;
-      proxy_set_header Host os.malcolm.local;
-      client_max_body_size 50m;
     }
   }
 
