for idaholab/Malcolm#20; make integrating intel feeds easier (just clone locally under ./zeek/intel/ and it will be bind-mounted in without having to manually modify local.zeek) and fix some zeek log fields

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -370,6 +370,7 @@ services:
       - ./zeek-logs/upload:/zeek/upload
       - ./zeek-logs/extract_files:/zeek/extract_files
       - ./zeek/config/local.zeek:/opt/zeek/share/zeek/site/local.zeek:ro
+      - ./zeek/intel:/opt/zeek/share/zeek/site/intel
     healthcheck:
       test: ["CMD", "supervisorctl", "status", "pcap-zeek"]
       interval: 30s
