--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -50,6 +50,7 @@ filter {
       "[zeek][dns][rtt]" => "float"
       "[zeek][ecat_log_address][length]" => "integer"
       "[zeek][enip][length]" => "integer"
+      "[zeek][intel][cif_confidence]" => "float"
       "[zeek][ipsec][maj_ver]" => "integer"
       "[zeek][ipsec][min_ver]" => "integer"
       "[zeek][ipsec][exchange_type]" => "integer"
