--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -342,6 +342,7 @@ services:
       - ./pcap:/pcap
       - ./zeek-logs/upload:/zeek/upload
       - ./zeek-logs/extract_files:/zeek/extract_files
+      - ./zeek/intel:/opt/zeek/share/zeek/site/intel
     healthcheck:
       test: ["CMD", "supervisorctl", "status", "pcap-zeek"]
       interval: 30s
